# astro

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml  testbuild.yml
cli/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/algorithms/: star_detection.h
lib/image/: PngImage.cpp  PngImage.h  dark.h  frame.h  image.h  image_path.h  light.h  photobatch.h
lib/utils/: batch_processor.h
shaders/: screen.frag  screen.vert
src/: CMakeLists.txt  frame.h  image.h  main.cpp  mainwindow.cpp  mainwindow.h  photobatch.h  screen.cpp  screen.h
src/algorithms/: star_detection.h
src/image/: dark.h  frame.h  image.cpp  image.h  image_path.cpp  light.h  photobatch.cpp  photobatch.h
src/ui/: mainwindow.cpp  screen.cpp
viewer/: CMakeLists.txt  main.cpp
viewer/ui/: mainwindow.cpp  mainwindow.h  screen.h
